--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,6 +5,19 @@
     --dark: #0F172B;
 }
 
+.text-primary {
+    color: var(--primary) !important;
+}
+
+.btn-primary {
+    background-color: var(--primary) !important;
+    border-color: var(--primary) !important;
+}
+
+.service-item:hover * {
+    color: var(--light) !important;    
+}
+
 .ff-secondary {
     font-family: 'Pacifico', cursive;
 }
@@ -214,7 +227,7 @@
 }
 
 .service-item:hover {
-    background: var(--primary);
+    background: var(--primary) !important;
 }
 
 .service-item * {
