--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,6 +5,7 @@
     --dark: #0F172B;
 }
 
+/********** Override Bootstrap **********/
 .text-primary {
     color: var(--primary) !important;
 }
@@ -17,7 +18,7 @@
 .service-item:hover * {
     color: var(--light) !important;    
 }
-
+/********************/
 .ff-secondary {
     font-family: 'Pacifico', cursive;
 }
@@ -434,14 +435,14 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    color: var(--light);
+    color: var(--light) !important;
     border: 1px solid #FFFFFF;
     border-radius: 35px;
     transition: .3s;
 }
 
 .footer .btn.btn-social:hover {
-    color: var(--primary);
+    color: var(--primary) !important;
 }
 
 .footer .btn.btn-link {
