ADD sections to home.html

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -2,10 +2,11 @@
 {% load static %}
 
 {% block content %}
-    <div class="container">
-        <div class="row">
-            <div class="col">
-            </div>
-        </div>
-    </div>
+    {% include 'includes/hero.html' %}
+    {% include 'includes/service.html' %}
+    {% include 'includes/aboutus.html' %}
+    {% include 'includes/menu.html' %}
+    {% include 'includes/reservation.html' %}
+    {% include 'includes/team.html' %}
+    {% include 'includes/contact.html' %}
 {% endblock %}
