--- a/templates/base.html
+++ b/templates/base.html
@@ -59,15 +59,12 @@
 </head>
 
 <body>
-    <header class="container-fluid fixed-top"></header>
     <div class="container-xxl bg-white p-0">
         {% include 'includes/navbar.html' %}
-        {% include 'includes/service.html' %}
-        {% include 'includes/aboutus.html' %}
-        {% include 'includes/menu.html' %}
-        {% include 'includes/reservation.html' %}
-        {% include 'includes/team.html' %}
+        {% block content %}
+        {% endblock %}
         {% include 'includes/footer.html' %}
+    </div>
     <!-- JavaScript Libraries -->
     <script href="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -87,9 +84,6 @@
     {% endif %}
 
     {% block page_header %}
-    {% endblock %}
-
-    {% block content %}
     {% endblock %}
 
     {% block postloadjs %}
