--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -10,12 +10,12 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto py-0 pe-4">
-                <a href="#" class="nav-item nav-link active">Home</a>
-                <a href="#aboutus" class="nav-item nav-link">About</a>
-                <a href="#service" class="nav-item nav-link">Service</a>
-                <a href="#menu" class="nav-item nav-link">Menu</a>
-                <a href="#team" class="nav-item nav-link">Team</a>
-                <a href="#contact" class="nav-item nav-link">Contact</a>
+                <a href="{% url 'home' %}" class="nav-item nav-link active">Home</a>
+                <a href="{% url 'home' %}#aboutus" class="nav-item nav-link">About</a>
+                <a href="{% url 'home' %}#service" class="nav-item nav-link">Service</a>
+                <a href="{% url 'home' %}#menu" class="nav-item nav-link">Menu</a>
+                <a href="{% url 'home' %}#team" class="nav-item nav-link">Team</a>
+                <a href="contacto.html" class="nav-item nav-link">Contact</a>
             </div>
             <a href="#reservation" class="btn btn-primary py-2 px-4">Book A Table</a>
         </div>
