--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -17,7 +17,7 @@
                 <a href="{% url 'home' %}#team" class="nav-item nav-link">Team</a>
                 <a href="contacto.html" class="nav-item nav-link">Contact</a>
             </div>
-            <a href="#reservation" class="btn btn-primary py-2 px-4">Book A Table</a>
+            <a href="{% url 'booking' %}" class="btn btn-primary py-2 px-4">Book A Table</a>
         </div>
     </nav>
 </div>
