FIX contacto.html commented

--- a/templates/includes/contact.html
+++ b/templates/includes/contact.html
@@ -9,6 +9,13 @@
         </nav>
     </div>
 </div>
+{% if message_name %}
+    <div>
+        <h2>Thank youu {{ message_name }}</h2>
+        <p>We received your email and will respond shortly...</p> 
+    </div>
+
+{% else %}
 <!-- Contact Start -->
 <div id="contact" class="container-xxl py-5">
     <div class="container">
@@ -41,7 +48,8 @@
             </div>
             <div class="col-md-6">
                 <div class="wow fadeInUp" data-wow-delay="0.2s">
-                    <form>
+                    <form action="{% url 'contacto' %}" method="post">
+                        {% csrf_token %}
                         <div class="row g-3">
                             <div class="col-md-6">
                                 <div class="form-floating">
@@ -53,12 +61,6 @@
                                 <div class="form-floating">
                                     <input type="email" class="form-control" id="email" placeholder="Your Email">
                                     <label for="email">Your Email</label>
-                                </div>
-                            </div>
-                            <div class="col-12">
-                                <div class="form-floating">
-                                    <input type="text" class="form-control" id="subject" placeholder="Subject">
-                                    <label for="subject">Subject</label>
                                 </div>
                             </div>
                             <div class="col-12">
@@ -79,3 +81,4 @@
     </div>
 </div>
 <!-- Contact End -->
+{% endif %}
