--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -15,7 +15,7 @@
                 <a href="{% url 'home' %}#service" class="nav-item nav-link">Service</a>
                 <a href="{% url 'home' %}#menu" class="nav-item nav-link">Menu</a>
                 <a href="{% url 'home' %}#team" class="nav-item nav-link">Team</a>
-                <a href="contacto.html" class="nav-item nav-link">Contact</a>
+                <!-- <a href="contacto.html" class="nav-item nav-link">Contact</a>-->
             </div>
             <a href="{% url 'booking' %}" class="btn btn-primary py-2 px-4">Book A Table</a>
         </div>
