--- a/templates/includes/reservation.html
+++ b/templates/includes/reservation.html
@@ -36,17 +36,19 @@
                         </div>
                         <div class="col-md-6">
                             <div class="form-floating date" id="date3" data-target-input="nearest">
-                                <input type="text" class="form-control datetimepicker-input" id="datetime"
-                                    placeholder="Date & Time" data-target="#date3" data-bs-toggle="datetimepicker" />
+                                <input type="text" class="form-control datetimepicker-input" id="datetime" placeholder="Date & Time"
+                                    data-target="#date3" data-toggle="datetimepicker" />
                                 <label for="datetime">Date & Time</label>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-floating">
                                 <select class="form-select" id="select1">
-                                    <option value="1">People 1</option>
-                                    <option value="2">People 2</option>
-                                    <option value="3">People 3</option>
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="+4">+4</option>
                                 </select>
                                 <label for="select1">No Of People</label>
                             </div>
