--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -17,7 +17,13 @@
                 <a href="{% url 'home' %}#team" class="nav-item nav-link">Team</a>
                 <!-- <a href="contacto.html" class="nav-item nav-link">Contact</a>-->
             </div>
-            <a href="{% url 'booking' %}" class="btn btn-primary py-2 px-4">Book A Table</a>
+            {% if user.is_authenticated %}
+            <a href="{% url 'logout' %}" class="btn btn-primary m-2 py-2 px-4">Logout</a>
+            <a href="{% url 'booking' %}" class="btn btn-primary m-2 py-2 px-4">Book a table</a>
+            {% else %}
+            <a href="{% url 'login' %}" class="btn btn-primary m-2 py-2 px-4">Register</a>
+            <a href="{% url 'login' %}" class="btn btn-primary m-2 py-2 px-4">Login</a>
+            {% endif %}
         </div>
     </nav>
 </div>
