--- a/static/css/style.css
+++ b/static/css/style.css
@@ -19,6 +19,15 @@
     color: var(--light) !important;    
 }
 /********************/
+/********** Style booking.html **********/
+.booking-text {
+    color: #F1F8FF;
+}
+.container-booking {
+    padding-bottom: 10rem;
+    padding-top: 10rem;
+}
+/********************/
 .ff-secondary {
     font-family: 'Pacifico', cursive;
 }
