--- a/templates/includes/reservation.html
+++ b/templates/includes/reservation.html
@@ -1,4 +1,4 @@
-<div class="container-xxl py-5 bg-dark hero-header mb-5">
+<div class="container-xxl py-5 bg-dark hero-header">
     <div class="container text-center my-5 pt-5 pb-4">
         <h1 class="display-3 text-white mb-3 animated slideInDown">Booking</h1>
         <nav aria-label="breadcrumb">
@@ -10,7 +10,7 @@
     </div>
 </div>
 <!-- Reservation Start -->
-<div id="reservation" class="container-xxl py-5 px-0 wow fadeInUp" data-wow-delay="0.1s">
+<div id="reservation" class="container-xxl px-0 wow fadeInUp" data-wow-delay="0.1s">
     <div class="row g-0">
         <div class="col-md-6">
             <div class="video">
