--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -20,7 +20,7 @@
             <a href="{% url 'logout' %}" class="btn btn-primary m-2 py-2 px-4">Logout</a>
             <a href="{% url 'booking' %}" class="btn btn-primary m-2 py-2 px-4">Book a table</a>
             {% else %}
-            <a href="{% url 'login' %}" class="btn btn-primary m-2 py-2 px-4">Register</a>
+            <a href="{% url 'register_user' %}" class="btn btn-primary m-2 py-2 px-4">Register</a>
             <a href="{% url 'login' %}" class="btn btn-primary m-2 py-2 px-4">Login</a>
             {% endif %}
         </div>
