--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,8 @@
     {% block corecss %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/bootstrap-datepicker@1.9.0/dist/css/bootstrap-datepicker.min.css">
     <!-- Template Stylesheet -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <!-- Favicon -->
@@ -35,6 +37,8 @@
         crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/0c9bf02fd8.js" crossorigin="anonymous"></script>
     <script href="{% static 'js/main.js' %}"></script>
+    <!-- Add this line to include Bootstrap DatePicker JavaScript file -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap-datepicker@1.9.0/dist/js/bootstrap-datepicker.min.js"></script>
     {% endblock %}
 
     {% block extra_js %}
