--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -18,7 +18,7 @@
             </div>
             {% if user.is_authenticated %}
             <a href="{% url 'logout' %}" class="btn btn-primary m-2 py-2 px-4">Logout</a>
-            <a href="{% url 'booking' %}" class="btn btn-primary m-2 py-2 px-4">Book a table</a>
+            <a href="{% url 'make_reservation' %}" class="btn btn-primary m-2 py-2 px-4">Book a table</a>
             {% else %}
             <a href="{% url 'register_user' %}" class="btn btn-primary m-2 py-2 px-4">Register</a>
             <a href="{% url 'login' %}" class="btn btn-primary m-2 py-2 px-4">Login</a>
