--- a/templates/includes/reservation.html
+++ b/templates/includes/reservation.html
@@ -9,15 +9,6 @@
         </nav>
     </div>
 </div>
-<script>
-    $(document).ready(function () {
-        // Initialize date picker
-        $('#datepicker').datepicker({
-            startDate: new Date(), // Prevent selecting dates in the past
-            autoclose: true,
-        });
-    });
-</script>
 <!-- Reservation Start -->
 <div id="reservation" class="container-xxl px-0 wow fadeInUp" data-wow-delay="0.1s">
     <div class="row g-0">
@@ -29,77 +20,10 @@
             <div class="p-5 wow fadeInUp" data-wow-delay="0.2s">
                 <h5 class="section-title ff-secondary text-start text-primary fw-normal">Reservation</h5>
                 <h1 class="text-white mb-4">Book A Table Online</h1>
-                <form>
-                    <div class="row g-3">
-                        <div class="col-md-6">
-                            <div class="form-floating">
-                                <input type="text" class="form-control" id="name" placeholder="Your Name">
-                                <label for="name">Your Name</label>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="form-floating">
-                                <input type="email" class="form-control" id="email" placeholder="Your Email">
-                                <label for="email">Your Email</label>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="input-group form-floating date" data-provide="datepicker">
-                                <input type="text" class="form-control" id="datepicker" placeholder="Select a date"
-                                    data-date-format="yyyy-mm-dd" readonly>
-                                <label for="datepicker">Date</label>
-                                <div class="input-group-append">
-                                    <span class="input-group-text py-3"><i class="bi bi-calendar"></i></span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="form-floating">
-                                <select class="form-select" id="select1">
-                                    <option value="9">9AM</option>
-                                    <option value="10">10AM</option>
-                                    <option value="11">11AM</option>
-                                    <option value="12">12M</option>
-                                    <option value="13">1PM</option>
-                                    <option value="14">2PM</option>
-                                    <option value="15">3PM</option>
-                                    <option value="16">4PM</option>
-                                    <option value="17">5PM</option>
-                                    <option value="18">6PM</option>
-                                </select>
-                                <label for="select1">Time</label>
-                            </div>
-                        </div>
-                        <!--<div class="col-md-6">
-                            <div class="form-floating date" id="date3" data-target-input="nearest">
-                                <input type="text" class="form-control datetimepicker-input" id="datetime" placeholder="Date & Time"
-                                    data-target="#date3" data-toggle="datetimepicker" />
-                                <label for="datetime">Date & Time</label>
-                            </div>
-                        </div>-->
-                        <div class="col-md-6">
-                            <div class="form-floating">
-                                <select class="form-select" id="select1">
-                                    <option value="1">1</option>
-                                    <option value="2">2</option>
-                                    <option value="3">3</option>
-                                    <option value="4">4</option>
-                                    <option value="+4">+4</option>
-                                </select>
-                                <label for="select1">No Of People</label>
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <div class="form-floating">
-                                <textarea class="form-control" placeholder="Special Request" id="message"
-                                    style="height: 100px"></textarea>
-                                <label for="message">Special Request</label>
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <button class="btn btn-primary w-100 py-3" type="submit">Book Now</button>
-                        </div>
-                    </div>
+                <form method="post" action="{% url 'make_reservation' %}">
+                    {% csrf_token %}
+                    {{ form.as_p }}
+                    <button type="submit">Submit</button>
                 </form>
             </div>
         </div>
@@ -123,4 +47,13 @@
         </div>
     </div>
 </div>
+<script>
+    $(document).ready(function () {
+        // Initialize date picker
+        $('#datepicker').datepicker({
+            startDate: new Date(), // Prevent selecting dates in the past
+            autoclose: true,
+        });
+    });
+</script>
 <!-- Reservation End -->
