--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -9,17 +9,26 @@
             <span class="fa fa-bars"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
+            {% if user.is_authenticated %}
             <div class="navbar-nav ms-auto py-0 pe-4">
                 <a href="{% url 'home' %}" class="nav-item nav-link active">Home</a>
                 <a href="{% url 'home' %}#aboutus" class="nav-item nav-link">About</a>
                 <a href="{% url 'home' %}#menu" class="nav-item nav-link">Menu</a>
                 <a href="{% url 'home' %}#team" class="nav-item nav-link">Team</a>
+                <a href="{% url 'reservation_list' %}" class="nav-item nav-link">My bookings</a>
                 <!-- <a href="contacto.html" class="nav-item nav-link">Contact</a>-->
             </div>
-            {% if user.is_authenticated %}
             <a href="{% url 'logout' %}" class="btn btn-primary m-2 py-2 px-4">Logout</a>
             <a href="{% url 'make_reservation' %}" class="btn btn-primary m-2 py-2 px-4">Book a table</a>
             {% else %}
+            <div class="navbar-nav ms-auto py-0 pe-4">
+                <a href="{% url 'home' %}" class="nav-item nav-link active">Home</a>
+                <a href="{% url 'home' %}#aboutus" class="nav-item nav-link">About</a>
+                <a href="{% url 'home' %}#menu" class="nav-item nav-link">Menu</a>
+                <a href="{% url 'home' %}#team" class="nav-item nav-link">Team</a>
+                <a href="{% url 'reservation_list' %}" class="nav-item nav-link">My bookings</a>
+                <!-- <a href="contacto.html" class="nav-item nav-link">Contact</a>-->
+            </div>
             <a href="{% url 'register_user' %}" class="btn btn-primary m-2 py-2 px-4">Register</a>
             <a href="{% url 'login' %}" class="btn btn-primary m-2 py-2 px-4">Login</a>
             {% endif %}
