--- a/website/templates/booking.html
+++ b/website/templates/booking.html
@@ -8,7 +8,7 @@
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title">Error</h5>
+                            <h5 class="modal-title">Notification</h5>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
@@ -30,7 +30,7 @@
                 });
             </script>
         {% endif %}
-    {% include 'includes/reservation.html' %}
+    {% include 'includes/list.html' %}
     {% else %}
         <div class="container-xxl container-booking bg-dark hero-header">
             <div class="container text-center my-0 pt-5 pb-5">
