--- a/templates/includes/list.html
+++ b/templates/includes/list.html
@@ -35,7 +35,7 @@
                                     </li>
                                 </ul>
                                 <div class="card-body">
-                                    <a href="#" class="btn btn-warning">Update</a>
+                                    <a href="{% url 'update_list' reservation.id %}" class="btn btn-warning">Update</a>
                                     <a href="#" class="btn btn-danger">Delete</a>
                                 </div>
                             </div>
