FIX styles reservation_list

--- a/profiles/templates/reservation_list.html
+++ b/profiles/templates/reservation_list.html
@@ -37,6 +37,12 @@
         <h3 class="display-5 text-white mb-3 animated slideInDown">
             Please, login or register in order to book a table
         </h3>
+        <h4 class="text-white">
+            If you want to login, you can do it <a href="{% url 'login' %}">Here</a>
+        </h4>
+        <h4 class="text-white">
+            If you want to register, you can do it <a href="{% url 'register_user' %}">Here</a>
+        </h4>
     </div>
 </div>
 {% endif %}
