FIX load static tag

--- a/templates/includes/hero.html
+++ b/templates/includes/hero.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!-- Hero Start -->
 <div class="container-xxl py-5 bg-dark hero-header mb-5">
     <div class="container my-5 py-5">
