--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!-- Footer Start -->
 <div id="footer" class="container-fluid bg-dark text-light footer pt-5 wow fadeIn" data-wow-delay="0.1s">
     <div class="container py-5">
