--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!-- Navbar Start -->
 <div class="container-xxl position-relative p-0">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-4 px-lg-5 py-3 py-lg-0">
